# Kurisu

./: .gitignore  .gitmodules  CMakeLists.txt  generate_version_info.py  partitions.csv  sdkconfig  sdkconfig.defaults
.github/workflows/: build.yml  main.yml
include/: cam.h  i2s.h  motor.h  ota.h  server.h  wifi.h
main/: CMakeLists.txt  Kconfig.projbuild  app_main.cpp  cam.cpp  i2s.c  idf_component.yml  motor.c  ota.c  server.cpp  wifi.c
main/web/: cam.http  motor.http  ota.http  servo.http
